--- a/index.html
+++ b/index.html
@@ -103,9 +103,40 @@
 									</div>
 								</div>
 							</section>
-
-						<!-- Four -->
+							
+							<!-- Four -->
 							<section id="four">
+								<div class="container">
+									<h3 style="color: #005192;">Misiones</h3>
+									<p>Aquí compartiré algunas cosas de mi vida y fotos que tomé.</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="./IMÁGENES/hola fest.png" alt="" /></a>
+											<div class="inner">
+												<h4>Un día en el "Hola Fest"</h4>
+												<p>Fui al "Hola Fest" con mis amigos y la pasamos super bien. Conocimos marcas nuevas y compramos stickers, bebidas, accesorios, etc.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="./IMÁGENES/amigues.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Universidad + Amigos</h4>
+												<p>	3 lil'homies</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="./IMÁGENES/museos.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Museos</h4>
+												<p>Me gusta visitar museos y aprender más sobre lo desconocido.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+							
+						<!-- Five -->
+							<section id="five">
 								<div class="container">
 									<h3 style="color: #005192;">Contáctame</h3>
 									<p>Si quieres hablar conmigo, no dudes en contactarme. En la siguiente sección puedes dejarme tus datos y me pondré en contacto contigo pronto.</p>
