--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Mis gustos</a></li>
 						<li><a href="#three">Publicaciones</a></li>
-						<li><a href="#four">Contacto</a></li>
+						<li><a href="#four">Misiones</a></li>
+						<li><a href="#five">Contacto</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -134,7 +135,7 @@
 									</div>
 								</div>
 							</section>
-							
+
 						<!-- Five -->
 							<section id="five">
 								<div class="container">
