--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<section id="four">
 								<div class="container">
 									<h3 style="color: #005192;">Misiones</h3>
-									<p>Aquí compartiré algunas cosas de mi vida y fotos que tomé.</p>
+									<p>Actividades realizadas en clase.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="./IMÁGENES/hola fest.png" alt="" /></a>
@@ -137,28 +137,26 @@
 							</section>
 
 						<!-- Five -->
-							<section id="five">
-								<div class="container">
-									<h3 style="color: #005192;">Contáctame</h3>
-									<p>Si quieres hablar conmigo, no dudes en contactarme. En la siguiente sección puedes dejarme tus datos y me pondré en contacto contigo pronto.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class ="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div> 
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Enviar mensaje" /></li>
-													<li><input type="reset" value="Reiniciar" /></li>
-												</ul>
-											</div>
+						<section id="five">
+							<div class="container">
+								<h3 style="color: #005192;">Contáctame</h3>
+								<p>Si quieres hablar conmigo, no dudes en contactarme. En la siguiente sección puedes dejarme tus datos y me pondré en contacto contigo pronto.</p>
+								<form method="post" action="#">
+									<div class="row gtr-uniform">
+										<div class ="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div> 
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+										<div class="col-12">
+											<ul class="actions">
+												<li><input type="submit" class="primary" value="Enviar mensaje" /></li>
+												<li><input type="reset" value="Reiniciar" /></li>
+											</ul>
 										</div>
-									</form>
-								</div>
-							</section>
-
-						<!-- Five -->
+									</div>
+								</form>
+							</div>
+						</section>
 						<!--
 							<section id="five">
 								<div class="container">
