--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Mis gustos</a></li>
 						<li><a href="#three">Publicaciones</a></li>
-						<li><a href="#four">Misiones</a></li>
-						<li><a href="#five">Contacto</a></li>
+						<li><a href="#four">Contacto</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -104,63 +103,59 @@
 									</div>
 								</div>
 							</section>
-							
-							<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3 style="color: #005192;">Misiones</h3>
-									<p>Actividades realizadas en clase.</p>
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="./IMÁGENES/hola fest.png" alt="" /></a>
-											<div class="inner">
-												<h4>Un día en el "Hola Fest"</h4>
-												<p>Fui al "Hola Fest" con mis amigos y la pasamos super bien. Conocimos marcas nuevas y compramos stickers, bebidas, accesorios, etc.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="./IMÁGENES/amigues.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Universidad + Amigos</h4>
-												<p>	3 lil'homies</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="./IMÁGENES/museos.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Museos</h4>
-												<p>Me gusta visitar museos y aprender más sobre lo desconocido.</p>
-											</div>
-										</article>
-									</div>
+
+						<!-- Four -->
+						<section id="three">
+							<div class="container">
+								<h3 style="color: #005192;">Misiones</h3>
+								<p>Actividades realizadas en clase</p>
+								<div class="features">
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/hola fest.png" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 4 "Misión Arduino"</h4>
+											<p>Fui al "Hola Fest" con mis amigos y la pasamos super bien. Conocimos marcas nuevas y compramos stickers, bebidas, accesorios, etc.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/amigues.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 5 "1 Led, 3 Leds y Sonar"</h4>
+											<p>	3 lil'homies</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/museos.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Museos</h4>
+											<p>Me gusta visitar museos y aprender más sobre lo desconocido.</p>
+										</div>
+									</article>
 								</div>
-							</section>
+							</div>
+						</section>
 
 						<!-- Five -->
 						<section id="five">
-							<div class="container">
-								<h3 style="color: #005192;">Contáctame</h3>
-								<p>Si quieres hablar conmigo, no dudes en contactarme. En la siguiente sección puedes dejarme tus datos y me pondré en contacto contigo pronto.</p>
-								<form method="post" action="#">
-									<div class="row gtr-uniform">
-										<div class ="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div> 
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="primary" value="Enviar mensaje" /></li>
-												<li><input type="reset" value="Reiniciar" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</div>
-						</section>
-						<!--
-							<section id="five">
 								<div class="container">
-									<h3>Elements</h3>
+									<h3 style="color: #005192;">Contáctame</h3>
+									<p>Si quieres hablar conmigo, no dudes en contactarme. En la siguiente sección puedes dejarme tus datos y me pondré en contacto contigo pronto.</p>
+									<form method="post" action="#">
+										<div class="row gtr-uniform">
+											<div class ="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div> 
+											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+											<div class="col-12">
+												<ul class="actions">
+													<li><input type="submit" class="primary" value="Enviar mensaje" /></li>
+													<li><input type="reset" value="Reiniciar" /></li>
+												</ul>
+											</div>
+										</div>
+									</form>
+								</div>
+							</section>
 
 									<section>
 										<h4>Text</h4>
