--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Mis gustos</a></li>
 						<li><a href="#three">Publicaciones</a></li>
-						<li><a href="#four">Contacto</a></li>
+						<li><a href="#four">Publicaciones</a></li>
+						<li><a href="#five">Contacto</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -105,7 +106,7 @@
 							</section>
 
 						<!-- Four -->
-						<section id="three">
+						<section id="four">
 							<div class="container">
 								<h3 style="color: #005192;">Misiones</h3>
 								<p>Actividades realizadas en clase</p>
