--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Mis gustos</a></li>
 						<li><a href="#three">Publicaciones</a></li>
-						<li><a href="#four">Publicaciones</a></li>
+						<li><a href="#four">Misiones</a></li>
 						<li><a href="#five">Contacto</a></li>
 					</ul>
 				</nav>
