--- a/index.html
+++ b/index.html
@@ -109,29 +109,34 @@
 						<section id="four">
 							<div class="container">
 								<h3 style="color: #005192;">Misiones</h3>
-								<p>Actividades realizadas en clase</p>
+								<p>Actividades realizadas en clase 💀.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/hola fest.png" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/SEM 4 Misión arduino.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 4 "Misión Arduino"</h4>
-											<p>Fui al "Hola Fest" con mis amigos y la pasamos super bien. Conocimos marcas nuevas y compramos stickers, bebidas, accesorios, etc.</p>
+											<p>El profesor nos pidió realizar un circuito que llegará a cumplir con la cantidad establecida.En total se realizarón 2 circuitos, en los que tuvimos que desarrollar un procedimiento para confirmar nuestra respuesta.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/amigues.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/un led.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Semana 5 "1 Led, 3 Leds y Sonar"</h4>
-											<p>	3 lil'homies</p>
+											<h4>Semana 5 (5.1) "1 Led"</h4>
+											<p>	Tuvimos que armar un circuito que con ayuda del arduino, el botón y la programación, encendiera un led de color rojo.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/museos.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/3 leds.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Museos</h4>
-											<p>Me gusta visitar museos y aprender más sobre lo desconocido.</p>
+											<h4>Semana 5 (5.2) "3 Leds"</h4>
+											<p>Se armó un circuito en serie de tres leds (rojo, verde y azul porque el amarillo no prendría 😭) que con ayuda del arduino, el botón y la programación, encendiera los leds.</p>
 										</div>
 									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/sonar.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 5 (5.3) "Sonar"</h4>
+											<p>Se armó un circuito en serie de tres leds (rojo, verde y azul porque el amarillo no prendría 😭) que con ayuda del arduino, el botón y la programación, encendiera los leds.</p>
 								</div>
 							</div>
 						</section>
