--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<p>Actividades realizadas en clase 💀.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/SEM 4 Misión arduino.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/misión arduino.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 4 "Misión Arduino"</h4>
 											<p>El profesor nos pidió realizar un circuito que llegará a cumplir con la cantidad establecida.En total se realizarón 2 circuitos, en los que tuvimos que desarrollar un procedimiento para confirmar nuestra respuesta.</p>
