--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/3 leds.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/tres leds.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 5 (5.2) "3 Leds"</h4>
 											<p>Se armó un circuito en serie de tres leds (rojo, verde y azul porque el amarillo no prendría 😭) que con ayuda del arduino, el botón y la programación, encendiera los leds.</p>
@@ -136,7 +136,7 @@
 										<a href="#" class="image"><img src="./IMÁGENES/sonar.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 5 (5.3) "Sonar"</h4>
-											<p>Se armó un circuito en serie de tres leds (rojo, verde y azul porque el amarillo no prendría 😭) que con ayuda del arduino, el botón y la programación, encendiera los leds.</p>
+											<p>Aparte de los circuitos ya creados, se incluyó un sonar para medir la distancia de los objetos próximos a este.</p>
 								</div>
 							</div>
 						</section>
