--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<p>Actividades realizadas en clase 💀.</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/misión arduino.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/mision arduino.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 4 "Misión Arduino"</h4>
 											<p>El profesor nos pidió realizar un circuito que llegará a cumplir con la cantidad establecida.En total se realizarón 2 circuitos, en los que tuvimos que desarrollar un procedimiento para confirmar nuestra respuesta.</p>
@@ -126,7 +126,7 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/3 leds.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/tres leds.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 5 (5.2) "3 Leds"</h4>
 											<p>Se armó un circuito en serie de tres leds (rojo, verde y azul porque el amarillo no prendría 😭) que con ayuda del arduino, el botón y la programación, encendiera los leds.</p>
@@ -137,6 +137,13 @@
 										<div class="inner">
 											<h4>Semana 5 (5.3) "Sonar"</h4>
 											<p>Aparte de los circuitos ya creados, se incluyó un sonar para medir la distancia de los objetos próximos.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/motor.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 6 "Motor"</h4>
+											<p>Se realizó el circuito para hacer que el moto se pudiera mover en base a lo que detectaba el sonar.</p>
 								</div>
 							</div>
 						</section>
