--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 									<article>
 										<a href="#" class="image"><img src="./IMÁGENES/motor.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Semana 6 "Motor"</h4>
-											<p>Se realizó el circuito para hacer que el moto se pudiera mover en base a lo que detectaba el sonar.</p>
+											<h4>Semana 6 "Misión Julita"</h4>
+											<p>Se realizó el circuito, proframación y algoritmo para hacer que el motor se pudiera mover en base a lo que detectaba el sonar. La situación era en base a la tienda ''Julita'', la cual se había quedado sin luz.</p>
 								</div>
 							</div>
 						</section>
