--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
 										<div class="inner">
 											<h4>Semana 6 "Misión Julita"</h4>
 											<p>Se realizó el circuito, proframación y algoritmo para hacer que el motor se pudiera mover en base a lo que detectaba el sonar. La situación era en base a la tienda ''Julita'', la cual se había quedado sin luz.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/sensor temperatura.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 8 "Armado de prototipo"</h4>
+											<p>Ya empezaron las semanas de armado de circuitos, programación y creación de algoritmo, en donde desarrollamos nuestro circuito con las herramientas obtenidas para ver su funcionalidad y que su uso sea el adecuado.</p>
 								</div>
 							</div>
 						</section>
