--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
 										<div class="inner">
 											<h4>Semana 8 "Armado de prototipo"</h4>
 											<p>Ya empezaron las semanas de armado de circuitos, programación y creación de algoritmo, en donde desarrollamos nuestro circuito con las herramientas obtenidas para ver su funcionalidad y que su uso sea el adecuado.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="./IMÁGENES/maceta lista.jpeg" alt="" /></a>
+										<div class="inner">
+											<h4>Semana 10 "Circuito listo"</h4>
+											<p>Ya empezaron las semanas de armado de circuitos, programación y creación de algoritmo, en donde desarrollamos nuestro circuito con las herramientas obtenidas para ver su funcionalidad y que su uso sea el adecuado.</p>
 								</div>
 							</div>
 						</section>
