--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
 										<a href="#" class="image"><img src="./IMÁGENES/maceta lista.jpeg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 10 "Circuito listo"</h4>
-											<p>Ya empezaron las semanas de armado de circuitos, programación y creación de algoritmo, en donde desarrollamos nuestro circuito con las herramientas obtenidas para ver su funcionalidad y que su uso sea el adecuado.</p>
+											<p>Dentro del Promedio 2, presentamos los circuitos terminados de nuestras propuestas creativas. En nuestro caso, inicialmente culminamos el circuito de la maceta y el ratón, ya que íbamos a desarrollar una maceta hidropónic.
+												Esta presentará un sensor de temperatura y humedad que será representado por un ratón, y una maceta con su propio circuito para su funcionamiento.
+											</p>
 								</div>
 							</div>
 						</section>
