--- a/index.html
+++ b/index.html
@@ -154,12 +154,10 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="./IMÁGENES/maceta lista.jpeg" alt="" /></a>
+										<a href="#" class="image"><img src="./IMÁGENES/maqueta.jpg" alt="" /></a>
 										<div class="inner">
-											<h4>Semana 10 "Circuito listo"</h4>
-											<p>Dentro del Promedio 2, presentamos los circuitos terminados de nuestras propuestas creativas. En nuestro caso, inicialmente culminamos el circuito de la maceta y el ratón, ya que íbamos a desarrollar una maceta hidropónic.
-												Esta presentará un sensor de temperatura y humedad que será representado por un ratón, y una maceta con su propio circuito para su funcionamiento.
-											</p>
+											<h4>Semana 11 & 12 "Diseño y Maquetación"</h4>
+											<p>Realizamos el diseño de nuestro proyecto final, primero en una versión boceteada y luego empezamos a trasladarlo a la vida real. Utilizamos materiales para poder crear nuestro diseño y poder visualizar mejor la estructura.</p>
 								</div>
 							</div>
 						</section>
