--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
 										<div class="inner">
 											<h4>Semana 10 "Circuito listo"</h4>
 											<p>Dentro del Promedio 2, presentamos los circuitos terminados de nuestras propuestas creativas. En nuestro caso, inicialmente culminamos el circuito de la maceta y el ratón, ya que íbamos a desarrollar una maceta hidropónic.
-												Esta presentará un sensor de temperatura y humedad que será representado por un ratón, y una maceta con su propio circuito para funcionalidad.
-											</p>
+												Esta presentará un sensor de temperatura y humedad que será representado por un ratón, y una maceta con su propio circuito para su funcionamiento.</p>
 								</div>
 							</div>
 						</section>
