--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 										<a href="#" class="image"><img src="./IMÁGENES/maqueta.jpeg" alt="" /></a>
 										<div class="inner">
 											<h4>Semana 11 & 12 "Maquetación"</h4>
-											<p>Realizamos el diseño de nuestro proyecto final, primero en una versión boceteada y luego empezamos a trasladarlo a la vida real. Utilizamos materiales para poder crear nuestro diseño y poder visualizar mejor la estructura.</p>
+											<p>Realizamos el diseño de nuestro proyecto final, primero en una versión boceteada como guía y luego empezamos a trasladarlo a la vida real. Utilizamos materiales para poder crear nuestro diseño y poder visualizar mejor la estructura.</p>
 								</div>
 							</div>
 						</section>
